--- a/styles/globals.css
+++ b/styles/globals.css
@@ -219,7 +219,7 @@ nav {
 
 .dropdown-main-link:hover {
     background-color: #f5f5f5;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .submenu-arrow {
@@ -247,12 +247,12 @@ nav {
 
 .dropdown-submenu a:hover {
     background-color: #f9f9f9;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .nav-menu li a:hover {
     color: var(--black);
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .arrow {
@@ -405,6 +405,69 @@ nav {
 
 .searchButton:active {
     transform: scale(0.95);
+}
+
+
+
+
+/* Блок с контактами */
+.contact-info-section {
+    background-color: var(--white);
+    border-radius: 20px;
+    border-top: 4px solid var(--red);
+    border-bottom: 4px solid var(--red);
+    padding: 40px;
+    margin-top: 40px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
+}
+
+.contact-info-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+    margin-bottom: 40px;
+    padding-bottom: 40px;
+    border-bottom: 1px solid #eee;
+}
+
+.contact-info-column h3 {
+    color: var(--red);
+    font-size: var(--font-size-h3);
+    margin-bottom: 20px;
+    font-weight: 600;
+}
+
+.contact-info-column p {
+    color: var(--black);
+    font-size: 16px;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+
+.logotype {
+    width: 100px;
+    height: 100px;
+}
+
+.copyright {
+    text-align: center;
+    color: #666;
+    font-size: 14px;
+    padding-top: 20px;
+}
+
+.copyright-img {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    /*gap: 10px; */
+}
+
+.copyright-img img {
+    width: 40px;
+}
+
+.copyright-img a {
+    width: 40px;
 }
 
 
